<resources>
    <string name="app_name">Gwynder Central</string>
    <string name="operation_in_progress">Operation in progress. Please wait...</string>
    <string name="title_routes">Routes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="authorization_instructions_1">1. Go to https://gwynder.net.pl</string>
    <string name="authorization_instructions_2">2. Log in or create new account</string>
    <string name="authorization_instructions_3">3. Go to Authorized applications and request new authorization code
    </string>
    <string name="authorization_instructions_4">4. Write provided code below</string>
    <string name="confirm_code">Confirm code</string>
    <string name="confirmation_instructions_1">Confirm that below code is equals to on show on authorization screen
    </string>
    <string name="confirmation_instructions_2">If the code matches on in central authorize application and continue
    </string>
    <string name="continue_message">Continue</string>
    <string name="not_yet_authorized">Application isn\'t yet authorized</string>
    <string name="recording_launch_activity">Show</string>
    <string name="recording_cancel">Cancel</string>
    <string name="recording_in_progress">Recording location in progress</string>
    <string name="start_recording">Start recording</string>
    <string name="stop_recording">Stop recording</string>
    <string name="show_routes_history">Show routes history</string>
    <string name="latest_events">Latest events</string>
    <string name="current_recording_status">Current recording status</string>
</resources>
