<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".login.fragments.AuthorizationConfirmedFragment" android:padding="16dp">


    <TextView
            android:text="@string/confirmation_instructions_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_weight="1"/>
    <TextView
            android:id="@+id/response_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="000000"
            android:layout_weight="1"
            android:padding="8dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/confirmation_instructions_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    <Button
            android:text="@string/continue_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/continue_to_application"
            android:layout_weight="1"/>
    <TextView
            android:text="@string/not_yet_authorized"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/still_unauthorized"
            android:layout_weight="1"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone"/>
</LinearLayout>