<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              tools:context=".routes.fragments.RoutesCurrentStatusFragment">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
        <LinearLayout android:orientation="vertical"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content">
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_margin="10dp"
                      android:textAlignment="center"
                      android:text="@string/recording_in_progress"
                      android:id="@+id/recording_in_progress"
                      android:visibility="gone"/>
            <Button android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/start_recording"
                    android:text="@string/start_recording"/>
            <Button android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/stop_recording"
                    android:text="@string/stop_recording"
                    android:visibility="gone"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>